Possibly fixed scrollbar issue for iframe on windows Fixed truncate cutting off words Style updates

--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -113,6 +113,7 @@ header
     font-size 1.5em
     color #fff
     padding ($nav-height/2)
+    margin-left 8px
     font-family "raleway"
     .work
       font-weight bold
@@ -122,7 +123,7 @@ header
     float right
     position absolute
     top 50%
-    right 0
+    right 6px
     transform translate(0%, -50%)
     ul 
       margin 0
@@ -227,41 +228,49 @@ header
     width 100%
   
   .job-post
+    max-width 1020px
     list-style none
     padding 0 0 8px 0
-    margin 0 0 10px 0
+    margin 15px auto
     background #fff
     width 100%
     transition box-shadow .3s ease-out, margin .3s ease-out
     
-    i
+    .fa
       float left
       padding 14px 15px 15px 15px
       color $color2
 
     &:hover
-      box-shadow 4px 8px 15px rgba(0,0,0,.2)
+      cursor pointer
+      
+      i
+        color #fff
+      .title
+        background $color2
+        color #fff
 
   .title
     margin 0
     padding 10px 15px
     border-bottom 1px dashed $color2
     color $color3
+    transition background .2s ease-out
 
   .description
-    padding 20px 15px 15px 15px
+    padding 20px 30px 15px 15px
     font-size .9em
     line-height 1.5em
     
-  .information
+  .tags
+    margin-left 5px
     padding 1px 9px 3px 9px
     font-size .9em
     
-  // Optical fix for tags (probably because of colour contrasts)
-  .tag
-    padding 1px 9px 3px 9px
-    font-size .9em
-    background #dfdfdf
+    .tag
+      padding 1px 9px 3px 9px
+      font-size .9em
+      background #dfdfdf
 
 .tag
   display inline-block
